# smilebasic

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  Doxyfile.in  README.md  configure
src/: main.cpp
src/except/: ArrayIndexOutOfRangeException.cpp  ArrayIndexOutOfRangeException.h  ArrayNotRegisteredException.cpp  ArrayNotRegisteredException.h  ComparisonException.cpp  ComparisonException.h  LexerException.cpp  LexerException.h  OperationException.cpp  OperationException.h  ValueTypeException.cpp  ValueTypeException.h  VarNotRegisteredException.cpp  VarNotRegisteredException.h  VariantTypeException.cpp  VariantTypeException.h
src/lex/: Token.cpp  Token.h  TokenType.cpp  TokenType.h
src/util/: constants.cpp  constants.h  isElement.cpp  isElement.h  typecheck.cpp  typecheck.h
src/var/: Array.cpp  Array.h  ArrayIterator.cpp  ArrayIterator.h  ArrayRegistry.cpp  ArrayRegistry.h  Value.cpp  Value.h  ValueStreamVisitor.cpp  ValueStreamVisitor.h  ValueType.cpp  ValueType.h  Variable.cpp  Variable.h  VariableRegistry.cpp  VariableRegistry.h  VariableType.h
tests/: main.cpp
tests/lex/: TokenTest.h
tests/util/: IsElementTest.h  TypecheckTest.h
tests/var/: ArrayRegistryTest.h  ArrayTest.h  ValueStreamVisitorTest.h  ValueTest.h  VariableRegistryTest.h  VariableTest.h
